FIX: Layout Issues

--- a/src/global.css
+++ b/src/global.css
@@ -17,3 +17,10 @@ html {
 .testclass .ReactVirtualized__Table__row:last-child div div {
 	border-bottom: 0;
 }
+
+html,
+body,
+#root {
+	width: 100%;
+	height: 100%;
+}
